# picoc

./: .gitignore  CMakeLists.txt  Makefile  README.md  clibrary.c  expression.c  interpreter.h  lex.c  parse.c  picoc.c  platform.h  stats.c  stats.h  type.c  variable.c
c-tests/: adpcm_dec.c  arrayargs.c  basic-expressions.c  basic.c  complete.c  conditional.c  conversion.c  expressions.c  extern.c  extern.h  extern2.c  factorial.c  float-double.c  float.c  functions.c  hash.c  long.c  longlong.c  loop-comma.c  loop.c  md5.c  memory.c  petrinet.c  pointers.c  pragma.c  sizeof.c  test.c  types.c
cstdlib/: math.c  stdio.c  stdlib.c  time.c  unistd.c
